vlib/v/checker/tests/option_wrapped_cmp_op_err.out
vlib/v/checker/tests/option_wrapped_cmp_op_err.vv:3:10: error: `?string` cannot be used as `string`, unwrap the option first
    1 | fn main() {
    2 |     a := ?string('hi')
    3 |     println(a == 'hi')
      |             ^
    4 |     println('hi' == a)
    5 |     println(a != 'hi')
vlib/v/checker/tests/option_wrapped_cmp_op_err.vv:4:18: error: `?string` cannot be used as `string`, unwrap the option first
    2 |     a := ?string('hi')
    3 |     println(a == 'hi')
    4 |     println('hi' == a)
      |                     ^
    5 |     println(a != 'hi')
    6 |     println('hi' != a)
vlib/v/checker/tests/option_wrapped_cmp_op_err.vv:5:10: error: `?string` cannot be used as `string`, unwrap the option first
    3 |     println(a == 'hi')
    4 |     println('hi' == a)
    5 |     println(a != 'hi')
      |             ^
    6 |     println('hi' != a)
    7 | }
vlib/v/checker/tests/option_wrapped_cmp_op_err.vv:6:18: error: `?string` cannot be used as `string`, unwrap the option first
    4 |     println('hi' == a)
    5 |     println(a != 'hi')
    6 |     println('hi' != a)
      |                     ^
    7 | }
