vlib/v/checker/tests/option_wrapped_cmp_op_err.vv
fn main() {
	a := ?string('hi')
	println(a == 'hi')
	println('hi' == a)
	println(a != 'hi')
	println('hi' != a)
}
